# trading-service

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile  docker-compose.yml  pyproject.toml  test_client_live.py
backend/: cli.py  config.py  database.py  main.py  test_my_index.py
backend/api/: auth.py  credentials.py  dashboard.py  deps.py  guardian.py  markets.py  pairs.py  positions.py  quick_trades.py  system.py  trades.py
backend/engine/: order_executor.py  pair_job.py  position_sync.py  scheduler.py  simple_trade_guardian.py  stop_loss_guardian.py
backend/models/: __init__.py  credential.py  equity_snapshot.py  guardian_settings.py  job_log.py  position.py  simple_trade.py  trade.py  trading_pair.py  user.py
backend/schemas/: credential.py  trading_pair.py
backend/services/: auth.py  emergency_stop.py  encryption.py  lighter_client.py  market_data.py  signal_engine.py  telegram_bot.py
backend/utils/: constants.py  logging.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  StatCard.tsx  StatusBadge.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: CredentialsPage.tsx  DashboardPage.tsx  GuardianPage.tsx  LoginPage.tsx  LogsPage.tsx  PairDetailPage.tsx  PairsPage.tsx  QuickTradePage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: formatDate.ts  formatNumber.ts
migrations/: add_fill_prices.py
scripts/: migrate_sqlite_to_pg.py
tests/: test_quick_trades.py  test_twap.py
